1999-02-22  Dirk A. Mueller <dmuell@gmx.net>

	* kioslave/http.cpp : User-Agent settings now support pattern matching. 
	You can use the standard QRegExp wildcard characters, which are
          ? match any character
          * matches any sequence of charaters
         [] matches a defined set of characters
        Remember that the first-match of all entries will count. 

1999-02-18  David Faure  <faure@kde.org>

	* kioserver.cpp (getDestNameForLink): Completely changed the behaviour.
	 The old code resulted in a filename like "ftp:filename.ext"
	 instead of "ftp://host/path/filename.ext"
	 Used bookmark code for encoding instead.

1999-02-16  David Faure  <faure@kde.org>

	* kfmgui.cpp (showSource): Added option Editor to choose the preferred 
	editor used by Show Document / Frame source. Defaults to kedit.
	Idea from Dawit A.

1999-02-01  David Faure  <faure@kde.org>

	* kfm*: Copy/Paste for text (browser mode) as well as URLs (file
	manager mode). Enabled/Disabled menu items as one would expect.
	(Initial patch from Dawit A.)

1999-01-19  David Faure  <faure@kde.org>

	* kiojob.cpp: Show 'not implemented' when trying to download a remote 
	directory or upload a directory to a remote location.
	
	* kioserver.cpp: Use DirectoryEntries cache for isDir, if nothing better.

1999-01-18  David Faure  <faure@kde.org>

	* kbind.cpp: Open Properties when left-clicking a mimetype file.
	
	* kfmgui.cpp: Reduce bookmark text size if >40. New function in utils.*

1999-01-15  David Faure  <faure@kde.org>

	* kfmgui.cpp: Patch 15 from Michael Reiher :
	Passes the current path to kfind so that it sets
	it as default search path

1999-01-14  David Faure  <faure@kde.org>

	* kfmgui.*: Store bHtmlMode, useful to know which mode we're in.
	Allow Ctrl+Delete for deleting files, improved Ctrl+A handling.

1999-01-13  David Faure  <faure@kde.org>

	* kiojob.cpp: Patch from Waldo Bastian. Now kfm copies/moves
	symlinks as symlinks in local->local copies. It also checks for