@@ -26,7 +26,7 @@ kfm_SOURCES =	\
 	kfmserver_ipc2.cpp kfmserver.cpp kioserver.cpp kioserver_ipc.cpp \
 	kioserver_ipc2.cpp kfmipc.cpp root.cpp kfmman.cpp kiojob.cpp \
 	htmlcache.cpp autostart.cpp kfmtree.cpp \
-	krenamewin.cpp passworddialog.cpp kURLcompletion.cpp debug.cpp kfm.cpp \
+	krenamewin.cpp passworddialog.cpp kURLcompletion.cpp debug.cpp kfmw.cpp \
 	kfmpaths.cpp kfmjob.cpp kfmexec.cpp kmimemagic.cpp kfinder.cpp utils.cpp \
 	open-with.cpp finddlg.cpp kcookiejar.cpp kcookiewin.cpp popup.cpp kintlist.cpp
 
@@ -34,7 +34,7 @@ noinst_HEADERS =  \
 	kfmgui.h kfmview.h kbind.h root.h kfmdlg.h bookmark.h \
 	kfmprops.h kfmserver_ipc.h kioserver.h kioserver_ipc.h kfmipc.h \
 	kfmserver.h kfmman.h kiojob.h htmlcache.h kfmtree.h \
-	krenamewin.h passworddialog.h kURLcompletion.h utils.h kfm.h \
+	krenamewin.h passworddialog.h kURLcompletion.h utils.h kfmw.h \
 	config-kfm.h kfmpaths.h kfmjob.h kfmexec.h kmimemagic.h kfinder.h \
 	open-with.h finddlg.h kcookiejar.h kcookiewin.h popup.h \
 	kstrlist.h kintlist.h
@@ -45,7 +45,7 @@ METASOURCES =	\
 	kfmserver.moc kioserver.moc kioserver_ipc.moc \
 	root.moc kfmman.moc kiojob.moc  \
 	htmlcache.moc kfmtree.moc \
-	krenamewin.moc passworddialog.moc kURLcompletion.moc kfm.moc \
+	krenamewin.moc passworddialog.moc kURLcompletion.moc kfmw.moc \
 	kfmjob.moc kfmexec.moc kfinder.moc  \
 	open-with.moc finddlg.moc kcookiewin.moc popup.moc
 
